include/generated/ffi_v.h

BLayout * BView_GetLayout(const BView * self);
void BView_EnableLayoutInvalidation(BView * self);
void BView_DisableLayoutInvalidation(BView * self);
bool BView_IsLayoutInvalidationDisabled(BView * self);
bool BView_IsLayoutValid(const BView * self);
void BView_ResetLayoutInvalidation(BView * self);
BLayoutContext * BView_LayoutContext(const BView * self);
void BView_Layout(BView * self, bool force);
void BView_Relayout(BView * self);
void BView_SetToolTip(BView * self, const char * text);
void BView_SetToolTip1(BView * self, BToolTip * tip);
BToolTip * BView_ToolTip(const BView * self);
void BView_ShowToolTip(BView * self, BToolTip * tip);
void BView_HideToolTip(BView * self);
BView *BView_new(BMessage * archive);
BView *BView_new1(BRect* frame, const char * name, uint32 resizing_mode, uint32 flags);
BView *BView_new2(const char * name, uint32 flags, BLayout * layout);
BRect *BView_Bounds(const BView * self);
void BView_Flush(const BView * self);
BRect *BView_Frame(const BView * self);
void BView_GetPreferredSize(BView * self, float * _width, float * _height);
void BView_Hide(BView * self);
bool BView_IsFocus(const BView * self);
bool BView_IsHidden(const BView * self);
bool BView_IsHidden1(const BView * self, const BView * looking_from);
bool BView_IsPrinting(const BView * self);
BPoint *BView_LeftTop(const BView * self);
void BView_ResizeToPreferred(BView * self);
uint32 BView_ResizingMode(const BView * self);
void BView_SetResizingMode(BView * self, uint32 mode);
void BView_SetViewCursor(BView * self, const BCursor * cursor, bool sync);
void BView_Show(BView * self);
void BView_Sync(const BView * self);
BWindow * BView_Window(const BView * self);