src/generated/ffi_v.rs

    pub fn BView_GetLayout(self_: *const c_void) -> *mut c_void;
    pub fn BView_EnableLayoutInvalidation(self_: *mut c_void);
    pub fn BView_DisableLayoutInvalidation(self_: *mut c_void);
    pub fn BView_IsLayoutInvalidationDisabled(self_: *mut c_void) -> bool;
    pub fn BView_IsLayoutValid(self_: *const c_void) -> bool;
    pub fn BView_ResetLayoutInvalidation(self_: *mut c_void);
    pub fn BView_LayoutContext(self_: *const c_void) -> *mut c_void;
    pub fn BView_Layout(self_: *mut c_void, force: bool);
    pub fn BView_Relayout(self_: *mut c_void);
    pub fn BView_SetToolTip(self_: *mut c_void, text: *const c_char);
    pub fn BView_SetToolTip1(self_: *mut c_void, tip: *mut c_void);
    pub fn BView_ToolTip(self_: *const c_void) -> *mut c_void;
    pub fn BView_ShowToolTip(self_: *mut c_void, tip: *mut c_void);
    pub fn BView_HideToolTip(self_: *mut c_void);
    pub fn BView_new(archive: *mut c_void) -> *mut c_void;
    pub fn BView_new1(
        frame: *mut c_void,
        name: *const c_char,
        resizing_mode: u32,
        flags: u32,
    ) -> *mut c_void;
    pub fn BView_new2(name: *const c_char, flags: u32, layout: *mut c_void) -> *mut c_void;
    // DTOR: pub fn BView_~BView(self_: *mut c_void);
    pub fn BView_Bounds(self_: *const c_void) -> *mut c_void;
    pub fn BView_Flush(self_: *const c_void);
    pub fn BView_Frame(self_: *const c_void) -> *mut c_void;
    pub fn BView_GetPreferredSize(self_: *mut c_void, _width: *mut c_void, _height: *mut c_void);
    pub fn BView_Hide(self_: *mut c_void);
    pub fn BView_IsFocus(self_: *const c_void) -> bool;
    pub fn BView_IsHidden(self_: *const c_void) -> bool;
    pub fn BView_IsHidden1(self_: *const c_void, looking_from: *const c_void) -> bool;
    pub fn BView_IsPrinting(self_: *const c_void) -> bool;
    pub fn BView_LeftTop(self_: *const c_void) -> *mut c_void;
    pub fn BView_ResizeToPreferred(self_: *mut c_void);
    pub fn BView_ResizingMode(self_: *const c_void) -> u32;
    pub fn BView_SetResizingMode(self_: *mut c_void, mode: u32);
    pub fn BView_SetViewCursor(self_: *mut c_void, cursor: *const c_void, sync: bool);
    pub fn BView_Show(self_: *mut c_void);
    pub fn BView_Sync(self_: *const c_void);
    pub fn BView_Window(self_: *const c_void) -> *mut c_void;

}
